--- a/pom.xml
+++ b/pom.xml
@@ -6,27 +6,40 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>RESTful API with Spring boot</name>
-	
+
 	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
 	<dependencies>
 		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-web</artifactId>
-		    <version>2.1.0.RELEASE</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>2.1.0.RELEASE</version>
+		</dependency>
+
+		<!-- SWAGGER DEPENDENCIES -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
 		</dependency>
 	</dependencies>
-	
+
 	<properties>
 		<java.version>1.8</java.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-	
+
 
 	<build>
 		<plugins>
 			<plugin>
-					<!-- APACHE MAVEN PLUGIN -->
+				<!-- APACHE MAVEN PLUGIN -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.2.2</version>
@@ -34,9 +47,9 @@
 					<webappDirectory>false</webappDirectory>
 				</configuration>
 			</plugin>
-			
-				<!-- SPRING BOOT MAVEN PLUGIN -->
-				<plugin>
+
+			<!-- SPRING BOOT MAVEN PLUGIN -->
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>2.1.1.RELEASE</version>
